--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,7 @@ body{
 
 .container{
 	text-align:center;
+	margin: 10px;
 	width:100%;
 	margin: auto;
 	overflow: hidden;
@@ -61,3 +62,47 @@ header h2{
     cursor: pointer;
     border-radius: 3px;
 }
+
+.predict-button:hover {
+	background-color: #3c873e;
+}
+
+.loader {
+	border: 16px solid #f3f3f3;
+	border-radius: 50%;
+	border-top: 16px solid #3498db;
+	width: 50px;
+	height: 50px;
+	-webkit-animation: spin 2s linear infinite; /* Safari */
+	animation: spin 2s linear infinite;
+	position: absolute;
+	left: 50%;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+0% { -webkit-transform: rotate(0deg); }
+100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+0% { transform: rotate(0deg); }
+100% { transform: rotate(360deg); }
+}
+
+#wrapper {
+	max-width: 200px;
+	/* overflow: auto;
+	display: flex; */
+	position: absolute;
+	left: 50%;
+}
+
+/* #predict-button-id {
+   float:left;
+}
+
+#loader-id {
+	float: right;
+	vertical-align: middle;
+} */
