--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,18 +53,20 @@ header h2{
 }
 
 .predict-button {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 16px 32px;
+	background-color: #56b159;
+	color:  white;
+	font-size: 18px;
+	font-family: 'Monaco';
+	padding: 16px 32px;
     text-decoration: none;
     margin: 4px 2px;
     cursor: pointer;
-    border-radius: 3px;
+    border-radius: 10px;
 }
 
 .predict-button:hover {
-	background-color: #3c873e;
+	background-color: #1d8726;
+	color: white;
 }
 
 .loader {
@@ -76,7 +78,7 @@ header h2{
 	-webkit-animation: spin 2s linear infinite; /* Safari */
 	animation: spin 2s linear infinite;
 	position: absolute;
-	left: 50%;
+	left: 45%;
 }
 
 /* Safari */
@@ -106,3 +108,9 @@ header h2{
 	float: right;
 	vertical-align: middle;
 } */
+
+#article-text {
+	border-radius: 20px;
+	padding: 20px;
+    outline: none;
+}
