--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,7 +78,7 @@ header h2{
 	-webkit-animation: spin 2s linear infinite; /* Safari */
 	animation: spin 2s linear infinite;
 	position: absolute;
-	left: 45%;
+	left: 48%;
 }
 
 /* Safari */
@@ -100,17 +100,13 @@ header h2{
 	left: 50%;
 }
 
-/* #predict-button-id {
-   float:left;
-}
-
-#loader-id {
-	float: right;
-	vertical-align: middle;
-} */
-
 #article-text {
 	border-radius: 20px;
 	padding: 20px;
     outline: none;
+}
+
+#result-banner {
+	font-family: 'Monaco';
+	font-weight: 'bold';
 }
